# dynamic-array

./: .clang-format  example.c  meson.build
src/: dynarray.c  dynarray.h  meson.build  utils.c  utils.h
test/: meson.build  test_dynarray.c
